--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,21 +4,23 @@ volumes:
 services:
   db:
     image: postgres:9.6
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=db
     volumes:
       # Data volume
       - data:/var/lib/postgresql/data
       # Scripts
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=db
   frontend:
     image: nginx:1.13
     volumes:
       # Site
       - ./web:/usr/share/nginx/html/
+      # Reverse proxy config
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
   app:
@@ -28,5 +30,3 @@ services:
       - ./app:/app
     working_dir: /app
     command: bash ./app.sh
-    ports:
-      - 8080:8080
