--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,9 @@
 version: '3'
 volumes:
   data:
+networks:
+  database:
+  web:
 services:
   db:
     image: postgres:9.6
@@ -10,6 +13,8 @@ services:
       # Scripts
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - database
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -23,10 +28,19 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
+    networks:
+      - web
+    depends_on:
+      - app
   app:
     image: python:3.6
     volumes:
       # App
       - ./app:/app
+    networks:
+      - database
+      - web
+    depends_on:
+      - db
     working_dir: /app
     command: bash ./app.sh
