--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ volumes:
 networks:
   database:
   web:
+  queue:
 services:
   db:
     image: postgres:9.6
@@ -40,7 +41,24 @@ services:
     networks:
       - database
       - web
+      - queue
     depends_on:
       - db
+      - queue
     working_dir: /app
+    command: bash ./app.sh
+  queue:
+    image: redis:3.2
+    networks:
+      - queue
+  worker:
+    image: python:3.6
+    volumes:
+      # Worker
+      - ./worker:/worker
+    networks:
+      - queue
+    depends_on:
+      - queue
+    working_dir: /worker
     command: bash ./app.sh
